--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "@textlint/ast-node-types": "^14.3.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/horihiro/textlint-plugin-bicep.git"
+  },
   "devDependencies": {
     "@textlint/types": "^1.3.1",
     "@types/mocha": "^10.0.1",
